tests/snapshots/examples_fixtures/ModuleGraph__module_graph_main.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/ModuleGraph/module_graph_main.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `ModuleGraph.ModuleGraphA` to import.

  examples/ModuleGraph/module_graph_main.flx:5:1
  |
5 | import ModuleGraph.ModuleGraphA
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `ModuleGraph.ModuleGraphA.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `ModuleGraph.ModuleGraphA` under roots: examples/ModuleGraph, src, lib (imported from examples/ModuleGraph/module_graph_main.flx).


error[E018]: Import Not Found

Cannot find module `ModuleGraph.ModuleGraphB` to import.

  examples/ModuleGraph/module_graph_main.flx:6:1
  |
6 | import ModuleGraph.ModuleGraphB
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `ModuleGraph.ModuleGraphB.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `ModuleGraph.ModuleGraphB` under roots: examples/ModuleGraph, src, lib (imported from examples/ModuleGraph/module_graph_main.flx).

Found 2 errors.
== stdout ==
<not executed>
